k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-teste
spec:
  selector:
    app: myapp-teste
  ports:
  - port: 90
    targetPort: 7171
