k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-teste
  labels:
    name: myapp-teste
spec:
  rules:
    http:
      paths:
      - path: /myapp-teste
        backend:
          service:
            name: myapp-teste
            port: 
              number: 90
